// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[generation] createTypeTree utils createValidRouteIdentifier should match createIdentifier 1`] = `
IdentifierObject {
  "end": -1,
  "escapedText": "info",
  "flags": 8,
  "kind": 78,
  "modifierFlagsCache": 0,
  "originalKeywordKind": undefined,
  "parent": undefined,
  "pos": -1,
  "transformFlags": 0,
}
`;

exports[`[generation] createTypeTree utils createValidRouteIdentifier should match createStringLiteral when literal has "-" char 1`] = `
TokenObject {
  "end": -1,
  "flags": 8,
  "hasExtendedUnicodeEscape": undefined,
  "kind": 10,
  "modifierFlagsCache": 0,
  "parent": undefined,
  "pos": -1,
  "singleQuote": undefined,
  "text": "user-center",
  "transformFlags": 0,
}
`;
